View modified for news headlines

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AssignmentGrab</string>
+    <string name="error_occured">An Error Occurred While Loading Data!</string>
 </resources>
